force-app/main/default/objects/Additional_Charges_Master__c/Additional_Charges_Master__c.object-meta.xml
<CustomObject>
    <label>Additional Charges Master</label>
    <nameField>
        <displayFormat>ACM-{0000000000}</displayFormat>
        <label>Additional Charges Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Charges Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>