force-app/main/default/objects/Additional_Charges_Master__c/fields/ADM_CHRGCD__c.field-meta.xml
<CustomField>
    <fullName>ADM_CHRGCD__c</fullName>
    <externalId>true</externalId>
    <label>Charge Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>