force-app/main/default/objects/Additional_Charges_Master__c/fields/ADM_CHRGDESC__c.field-meta.xml
<CustomField>
    <fullName>ADM_CHRGDESC__c</fullName>
    <label>Charge Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>