force-app/main/default/objects/Additional_Charges_Master__c/fields/ADM_CHRGTYPE__c.field-meta.xml
<CustomField>
    <fullName>ADM_CHRGTYPE__c</fullName>
    <label>Charge Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>