force-app/main/default/objects/Additional_Charges_Master__c/fields/ADM_LASTUPDDT__c.field-meta.xml
<CustomField>
    <fullName>ADM_LASTUPDDT__c</fullName>
    <label>ADM_LASTUPDDT</label>
    <type>DateTime</type>
</CustomField>