force-app/main/default/objects/Additional_Charges_Master__c/fields/ADM_LTARELATED__c.field-meta.xml
<CustomField>
    <fullName>ADM_LTARELATED__c</fullName>
    <label>LTA Related</label>
    <length>1</length>
    <type>Text</type>
</CustomField>