force-app/main/default/objects/Additional_Charges_Master__c/fields/ADM_STATUS__c.field-meta.xml
<CustomField>
    <fullName>ADM_STATUS__c</fullName>
    <label>Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>