force-app/main/default/objects/Additional_Charges_Master__c/fields/ADM_STM_GSTCD__c.field-meta.xml
<CustomField>
    <fullName>ADM_STM_GSTCD__c</fullName>
    <label>GST Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>