force-app/main/default/objects/Additional_Charges_Master__c/fields/VSMS_Compound_Primary_Key__c.field-meta.xml
<CustomField>
    <fullName>VSMS_Compound_Primary_Key__c</fullName>
    <label>VSMS Compound Primary Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>